final/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: frontend  # 네임스페이스 추가
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: jungjunsung/webtest:23.0
          name: front
          volumeMounts:
            - mountPath: /etc/localtime
              name: front-claim0
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 300m
              memory: 300Mi
      volumes:
        - name: front-claim0
          persistentVolumeClaim:
            claimName: front-claim0

---
apiVersion: v1
kind: Service
metadata:
  namespace: frontend  # 네임스페이스 추가
  name: frontend-svc
spec:
  selector:
    app: frontend
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
