final/netpol-backend.yaml
#backend netpol
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-network-policy
  namespace: backend
spec:
  podSelector:   # 정책 적용 대상 Pod (app=backend)
    matchLabels:
      app: backend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:                    # default ns의 nginx ingress 허용
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
    - podSelector:
        matchLabels:
          app: nginx
    ports:
    - protocol: TCP
      port: 8000
  - from:                    # mongodb ns의 mongodb ingress 허용 
    - namespaceSelector:    
        matchLabels:
          kubernetes.io/metadata.name: mongodb
    - podSelector:
        matchLabels:
          app: mongodb
    ports:
    - protocol: TCP
      port: 27017
  egress:
  - to:                      # default ns의 8000 포트 egress 허용
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
    ports:
    - protocol: TCP
      port: 8000
  - to:                      # mongodb ns의 27017 포트 egress 허용
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: mongodb
    ports:
    - protocol: TCP
      port: 27017
  - to:                      # DNS 등 kube-system 통신 허용
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
