final/netpol-mongodb.yaml
#mongodb-netpol.yaml
#mongodb-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-network-policy
  namespace: mongodb
spec:
  podSelector:
    matchLabels:
      app: mongodb
  policyTypes:
  - Ingress
  - Egress
  
  ingress:
  - from:                    # backend에서 접속 허용
    - namespaceSelector:     
        matchLabels:
          kubernetes.io/metadata.name: backend
    - podSelector:
        matchLabels:
          app: backend
    ports:
    - protocol: TCP
      port: 27017

  - from:                    # Calico의 IP (tunl0 등) 혹은 kube-system 예외 허용 - robo 3T와 같은 DB툴 사용 목적
    - ipBlock:
        cidr: 10.108.82.192/32
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system

  egress:
  - to:                      # backend으로 접속 허용
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: backend
    - podSelector:
        matchLabels:
          app: backend
    ports:
    - protocol: TCP
      port: 27017
