final/netpol-nginx.yaml
## nginx-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-network-policy
  namespace: default  # default 네임스페이스에 존재하는 nginx Pod 대상
spec:
  podSelector:
    matchLabels:
      app: nginx  # app=nginx인 Pod에만 적용

  policyTypes:
  - Ingress
  - Egress

  ingress:
  - from:                                   # 외부 클라이언트 또는 시스템 서비스 예외 허용
    - ipBlock:
        cidr: 10.108.82.192/32              # Calico의 tunl0 인터페이스 IP
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system  # DNS 등 시스템 서비스 통신 허용
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443

  - from:                                   # frontend에서 nginx 접근 허용
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: frontend
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443

  - from:                                   # default 내부 nginx 간 통신 허용
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
    - podSelector:
        matchLabels:
          app: nginx
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443

  - from:                                   # backend에서 nginx 접근 허용
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: backend
    - podSelector:
        matchLabels:
          app: backend
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443

  egress:
  - to:                                     # nginx에서 frontend 송신 허용
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: frontend
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - protocol: TCP
      port: 3000

  - to:                                     # nginx에서 backend 송신 허용
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: backend
    - podSelector:
        matchLabels:
          app: backend
    ports:
    - protocol: TCP
      port: 8000
